[package]
name = "signing"
version = "0.1.0"
authors = ["Thibault Martinez <thibault@iota.org>"]
edition = "2018"

[dependencies]
crypto = { path = "../bee-crypto" }
ternary = { path = "../bee-ternary" }

rand = "0.7"
ed25519-dalek = "1.0.0-pre.3"
tiny-bip39 = { git =  "https://github.com/maciejhirsz/tiny-bip39.git" }

# ONLY TEMPORARY
iota-constants = { path = "../iota-constants" }
iota-conversion = { path = "../iota-conversion" }
